--- a/Projects/梦飞翔队/package.json
+++ b/Projects/梦飞翔队/package.json
@@ -9,6 +9,7 @@
   "author": "flaribbit",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.17.1",
     "rongcloud-sdk": "^3.1.1"
   }
 }
