--- a/Projects/fearless/src/frontend/package.json
+++ b/Projects/fearless/src/frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
+    "@ngrx/effects": "^10.0.0",
     "@ngrx/store": "^10.0.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
