--- a/Projects/秋分/FellowLive/app/build.gradle
+++ b/Projects/秋分/FellowLive/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.blankj:utilcodex:1.29.0'
 }
