--- a/Projects/kungfu/sGang/android/app/src/main/AndroidManifest.xml
+++ b/Projects/kungfu/sGang/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.rongcloud_im_plugin_example">
+    package="com.example.student_gang">
 
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
@@ -37,7 +37,7 @@
         </activity>
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.example.rongcloud_im_plugin_example.fileProvider"
+            android:authorities="com.example.student_gang.fileProvider"
             android:exported="false"
             android:grantUriPermissions="true"
             tools:replace="android:authorities">
