--- a/Projects/kungfu/sGang/android/app/build.gradle
+++ b/Projects/kungfu/sGang/android/app/build.gradle
@@ -37,7 +37,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.rongcloud_im_plugin_example"
+        applicationId "com.example.student_gang"
         minSdkVersion 23
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
@@ -45,7 +45,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         ndk {
-            abiFilters "armeabi-v7a","x86"
+            abiFilters "armeabi-v7a","arm64-v8a","x86"
         }
         //,"x86"
     }
